apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-server
  ports:
    - port: 80
      targetPort: 80
